fix(imapct tree): add correct spacing for iphone

--- a/app/assets/stylesheets/base/award.sass
+++ b/app/assets/stylesheets/base/award.sass
@@ -286,76 +286,32 @@
   .irorio
     +logo-sprite("irorio", $top: 795, $right: 174)
 
-@media (min-width: 480px)
+@media (min-width: 568px)
   .impact-tree
+    hgroup
+      +pie-clearfix
+      width: 80%
+      margin: 60px auto 0
+      h2
+        margin: 0
+      h2:first-child
+        float: left
+      h2:last-child
+        float: right
     h1
       margin-bottom: 0
     h2
       float: left
-      margin-top: 60px
-      margin-right: 30px
-      margin-bottom: 0
-      margin-left: 30px
-    .aol
-      margin-left: 45px
     .good
-      margin-top: 100px
+      margin-top: 40px
     .ard
-      margin-top: 85px
-      margin-left: 50px
+      margin-top: 25px
     .taxi
-      margin-top: 90px
-    .yahoo
-      margin-left: 40px
-      margin-bottom: 0
-    .abc
-      margin-top: 60px
-      margin-left: 60px
-      margin-bottom: 0
-    .redbox
-      margin-top: 70px
-      margin-left: 70px
-    .psfk
-      margin-left: 60px
-      margin-bottom: 0
-    .digiday
-      margin-left: 70px
-      margin-top: 70px
-    .fubiz
-      margin-left: 60px
-    .emitionalmojo
-      margin-left: 60px
-    .canvas8
-      margin-left: 70px
-    .takeapart
-      margin-left: 80px
-      margin-top: 75px
-    .trendhunter
-      margin-left: 60px
-    .mashable
-      margin-left: 40px
-    .nasdaq
-      margin-left: 65px
-    .nationswell
-      margin-left: 60px
-      margin-top: 75px
-    .bluebus
-      margin-left: 60px
+      margin-top: 25px
     .minutos
-      margin-left: 45px
-      margin-top: 100px
-    .influencia
-      margin-left: 60px
-    .swr
-      margin-left: 50px
-      margin-top: 85px
-    .hotdigital
-      margin-left: 60px
-    .kenh
-      margin-left: 60px
-    .irorio
       margin-top: 20px
-      margin-left: 130px
+    .hotdigital
+      margin-top: 12px
 
 @media (min-width: 768px)
   .impact-tree
